--- a/views/mail_templates.xml
+++ b/views/mail_templates.xml
@@ -164,6 +164,52 @@
 </html>
             ]]></field>
         </record>
+        
+        <!-- Pro-Forma Template -->
+        <record id="proforma_email_template_mk" model="email.template">
+            <field name="name">Pro-Forma Email Template (MK)</field>
+            <field name="email_from">${(object.user_id.email or object.company_id.email or 'noreply@localhost')|safe}</field>
+            <field name="subject">${object.company_id.name|safe}Профактура (${object.number or 'n/a'})</field>
+            <field name="partner_to">${object.partner_id.id}</field>
+            <field name="model_id" ref="model_account_proforma_invoice"/>
+            <field name="auto_delete" eval="False"/>
+            <field name="user_signature" eval="True"/>
+            <field name="report_template" ref="account_proforma_invoice.report_proforma_invoice"/>
+            <field name="report_name">Профактура_${(object.number or '').replace('/','_')}_${object.state == 'draft' and 'draft' or ''}</field>
+            <field name="lang">${object.partner_id.lang}</field>
+            <field name="body_html">
+                <![CDATA[
+                    <p style="margin-bottom: 0.11in; direction: ltr; line-height: 12.96px; color: rgb(34, 34, 34); font-family: &quot;Lucica Grande&quot;, Ubuntu, Arial, Verdana, sans-serif; font-size: 12px;">
+                        <font face="Times New Roman, serif">
+                            <font style="font-size: 12pt;">
+                                <span lang="mk-MK">Почитувани,</span>
+                            </font>
+                        </font>
+                    </p>
+                    <p style="margin-bottom: 0.11in; direction: ltr; line-height: 12.96px; color: rgb(34, 34, 34); font-family: &quot;Lucica Grande&quot;, Ubuntu, Arial, Verdana, sans-serif; font-size: 12px;">
+                        <font face="Times New Roman, serif">
+                            <font style="font-size: 12pt;">
+                                <span lang="mk-MK">Во прилог Ви ја доставувам профактурата за користење на нашите услуги.</span>
+                            </font>
+                        </font>
+                    </p>
+                    <p style="margin-bottom: 0.11in; direction: ltr; line-height: 12.96px; color: rgb(34, 34, 34); font-family: &quot;Lucica Grande&quot;, Ubuntu, Arial, Verdana, sans-serif; font-size: 12px;">
+                        <font face="Times New Roman, serif">
+                            <font style="font-size: 12pt;">
+                                <span lang="mk-MK">Доколку имате било какви прашања, Ви стојам на располагање.</span>
+                            </font>
+                        </font>
+                    </p>
+                    <p style="margin-bottom: 0.11in; direction: ltr; line-height: 12.96px; color: rgb(34, 34, 34); font-family: &quot;Lucica Grande&quot;, Ubuntu, Arial, Verdana, sans-serif; font-size: 12px;">
+                        <font face="Times New Roman, serif">
+                            <font style="font-size: 12pt;">
+                                <span lang="mk-MK">Со почит,</span>
+                            </font>
+                        </font>
+                    </p>
+                ]]>
+            </field>
+        </record>
 
     </data>            
 </openerp>
