--- a/views/target_menu.xml
+++ b/views/target_menu.xml
@@ -39,7 +39,9 @@
             <field name="res_model">mail.mail</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="target_features.view_mail_target_tree"/>
+            <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('target_features.view_mail_target_tree')}),
+                (0, 0, {'view_mode': 'form', 'view_id': ref('target_features.view_mail_target_form')})]"/>
             <field name="domain">[('model', '=', 'account.analytic.account')]</field>
         </record>
         
