--- a/report/account_invoice_report.xml
+++ b/report/account_invoice_report.xml
@@ -3,165 +3,181 @@
 <openerp>
     <data>
     
-        <template id="report_invoice_target_document" inherit_id="account.report_invoice_document">
-            <xpath expr="//." position="replace">
-                <!--t t-call="report.external_layout"-->
-                <div class="header">
-                     <div style="height: 100%;">
-                        <img class="img img-responsive" src="/account/static/src/img/MemoTarget.JPG" style="width: 100%;"/>     
+        <template id="report_invoice_target_document">
+            <div class="header">
+                <div style="height: 100%;">
+                    <img class="img img-responsive" src="/account/static/src/img/MemoTarget.JPG" style="width: 100%;"/>     
+                </div>
+            </div>
+            <div class="page">
+                <div class="row">                
+                    <div class="col-xs-5">
+                        <p>До: </p>
+                        <span t-field="o.partner_id.name"/><br/>
+                        <t t-if="o.partner_id.street">
+                            <span t-field="o.partner_id.street"/><br/>
+                        </t>
+                        <t t-if="o.partner_id.street2">
+                            <span t-field="o.partner_id.street2"/><br/>
+                        </t>
+                        <t t-if="o.partner_id.city">
+                            <span t-field="o.partner_id.city"/><br/>
+                        </t>
+                        <t t-if="o.partner_id.vat">
+                            <span t-field="o.partner_id.vat"/><br/>
+                        </t>                        
+                        <span t-field="o.partner_id.TaxNumber"/>
                     </div>
                 </div>
-                <div class="page">
-                    <div class="row">                
-                        <div class="col-xs-5">
-                            <p>До: </p>                   
-                            <address t-field="o.partner_id" t-field-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: true}"/>
-                            <span t-field="o.partner_id.vat"/>
-                             <span t-field="o.partner_id.TaxNumber"/>
-                        </div>
+                <br/>
+                <h2>
+                    <span t-if="o.type == 'out_invoice' and (o.state == 'open' or o.state == 'paid')">Invoice</span>
+                    <span t-if="o.type == 'out_invoice' and o.state == 'proforma2'">Профактура</span>
+                    <span t-if="o.type == 'out_invoice' and o.state == 'draft'">Нацрт Фактура</span>
+                    <span t-if="o.type == 'out_invoice' and o.state == 'cancel'">Откажана Фактура</span>
+                    <span t-if="o.type == 'out_refund'">Сторна Сметка</span>
+                    <span t-if="o.type == 'in_refund'">Сторна Сметка кон Добавувач</span>
+                    <span t-if="o.type == 'in_invoice'">Фактура</span>
+                    <span t-field="o.number"/>
+                </h2>
+    
+                <div class="row mt32 mb32">
+                    <div class="col-xs-3" t-if="o.name">
+                        <strong>Опис:</strong>
+                        <p t-field="o.name"/>
                     </div>
-                    <br/>
-                    <h2>
-                        <span t-if="o.type == 'out_invoice' and (o.state == 'open' or o.state == 'paid')">Invoice</span>
-                        <span t-if="o.type == 'out_invoice' and o.state == 'proforma2'">Профактура</span>
-                        <span t-if="o.type == 'out_invoice' and o.state == 'draft'">Нацрт Фактура</span>
-                        <span t-if="o.type == 'out_invoice' and o.state == 'cancel'">Откажана Фактура</span>
-                        <span t-if="o.type == 'out_refund'">Сторна Сметка</span>
-                        <span t-if="o.type == 'in_refund'">Сторна Сметка кон Добавувач</span>
-                        <span t-if="o.type == 'in_invoice'">Фактура</span>
-                        <span t-field="o.number"/>
-                    </h2>
-        
-                    <div class="row mt32 mb32">
-                        <div class="col-xs-3" t-if="o.name">
-                            <strong>Опис:</strong>
-                            <p t-field="o.name"/>
-                        </div>
-                        <div class="col-xs-3" t-if="o.date_invoice">
-                            <strong>Датум на фактура:</strong>
-                            <p t-field="o.date_invoice"/>
-                        </div>
-                        <div class="col-xs-3" t-if="o.origin">
-                            <strong>Извор:</strong>
-                            <p t-field="o.origin"/>
-                        </div>
-                        <div class="col-xs-3" t-if="o.currency_id">
-                            <strong>Валута:</strong>
-                            <p t-field="o.currency_id.symbol"/>
-                        </div>
-                        <div class="col-xs-3" t-if="o.partner_id.ref">
-                            <strong>Код на клиент:</strong>
-                            <p t-field="o.partner_id.ref"/>
-                        </div>
+                    <div class="col-xs-3" t-if="o.date_invoice">
+                        <strong>Датум на фактура:</strong>
+                        <p t-field="o.date_invoice"/>
                     </div>
-        
-                    <table class="table table-condensed">
-                        <thead>
+                    <div class="col-xs-3" t-if="o.origin">
+                        <strong>Извор:</strong>
+                        <p t-field="o.origin"/>
+                    </div>
+                    <div class="col-xs-3" t-if="o.date_due">
+                        <strong>Датум на доспевање:</strong>
+                        <p t-field="o.date_due"/>
+                    </div>
+                    <div class="col-xs-3" t-if="o.partner_id.ref">
+                        <strong>Код на клиент:</strong>
+                        <p t-field="o.partner_id.ref"/>
+                    </div>
+                </div>
+    
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Опис</th>
+                            <th>Количина</th>
+                            <th class="text-right">Единечна цена</th>
+                            <th class="text-right" groups="sale.group_discount_per_so_line">Попуст (%)</th>
+                            <th class="text-right">Данок</th>
+                            <th class="text-right">Износ</th>
+                        </tr>
+                    </thead>
+                    <tbody class="invoice_tbody">
+                        <tr t-foreach="o.invoice_line" t-as="l">
+                            <td><span t-field="l.name"/></td>
+                            <td>
+                                <span t-field="l.quantity"/>
+                                <span t-field="l.uos_id" groups="product.group_uom"/>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="l.price_unit"/>
+                            </td>
+                            <td groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
+                            <td class="text-right">
+                                <span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="l.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+    
+                <div class="row">
+                    <div class="col-xs-4 pull-right">
+                        <table class="table table-condensed">
+                            <tr class="border-black">
+                                <td><strong>Вкупно без данок</strong></td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_untaxed" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                                </td>
+                            </tr>
                             <tr>
-                                <th>Опис</th>
-                                <th>Количина</th>
-                                <th class="text-right">Единечна цена</th>
-                                <th class="text-right" groups="sale.group_discount_per_so_line">Попуст (%)</th>
-                                <th class="text-right">Данок</th>
-                                <th class="text-right">Износ</th>
-                            </tr>
-                        </thead>
-                        <tbody class="invoice_tbody">
-                            <tr t-foreach="o.invoice_line" t-as="l">
-                                <td><span t-field="l.name"/></td>
-                                <td>
-                                    <span t-field="l.quantity"/>
-                                    <span t-field="l.uos_id" groups="product.group_uom"/>
-                                </td>
+                                <td>Данок</td>
                                 <td class="text-right">
-                                    <span t-field="l.price_unit"/>
-                                </td>
-                                <td groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
-                                <td class="text-right">
-                                    <span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="l.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                                    <span t-field="o.amount_tax" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
                                 </td>
                             </tr>
-                        </tbody>
-                    </table>
-        
-                    <div class="row">
-                        <div class="col-xs-4 pull-right">
-                            <table class="table table-condensed">
-                                <tr class="border-black">
-                                    <td><strong>Вкупно без данок</strong></td>
-                                    <td class="text-right">
-                                        <span t-field="o.amount_untaxed" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Данок</td>
-                                    <td class="text-right">
-                                        <span t-field="o.amount_tax" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
-                                    </td>
-                                </tr>
-                                <tr class="border-black">
-                                    <td><strong>Вкупно</strong></td>
-                                    <td class="text-right">
-                                         <span t-field="o.amount_total" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
+                            <tr class="border-black">
+                                <td><strong>Вкупно</strong></td>
+                                <td class="text-right">
+                                     <span t-field="o.amount_total" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
-        
-                    <div class="row" t-if="o.tax_line">
-                        <div class="col-xs-6">
-                            <table class="table table-condensed">
-                                <thead>
-                                    <tr>
-                                        <th>Данок</th>
-                                        <th class="text-right">Основица</th>
-                                        <th class="text-right">Износ</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr t-foreach="o.tax_line" t-as="t">
-                                        <td><span t-field="t.name"/></td>
-                                        <td class="text-right">
-                                            <span t-field="t.base" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-field="t.amount" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-        
-                    <p t-if="o.comment">
-                        <strong>Коментар:</strong>
-                        <span t-field="o.comment"/>
-                    </p>
-                    <p t-if="o.payment_term">
-                        <strong>Рок на плаќање:</strong>
-                        <span t-field="o.payment_term"/>
-                    </p>
-                     <div class="row">
-                        <div class="col-xs-5 col-xs-offset-7">
-                            <h4 style="text-align: center;">ТАРГЕТ ГРУП</h4>
-                            <p style="text-align: center;">Законски застапник<br/>Лице овластено за потпишување на фактури<br/>Јованоска Марија</p>
-                                                
-                           <img style="position:absolute;right:150px" class="img img-responsive" src="/account/static/src/img/Jovanoska Marija - Potpis.jpg"/>
-                              
-                        </div>
-                    </div>
-                    <p t-if="o.fiscal_position">
-                        <strong>Фискална позиција:</strong>
-                        <span t-field="o.fiscal_position"/>
-                    </p>
                 </div>
-            <!--/t-->
-            <div class="footer"></div>
-            </xpath>
+    
+                <div class="row" t-if="o.tax_line">
+                    <div class="col-xs-6">
+                        <table class="table table-condensed">
+                            <thead>
+                                <tr>
+                                    <th>Данок</th>
+                                    <th class="text-right">Основица</th>
+                                    <th class="text-right">Износ</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr t-foreach="o.tax_line" t-as="t">
+                                    <td><span t-field="t.name"/></td>
+                                    <td class="text-right">
+                                        <span t-field="t.base" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-field="t.amount" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.currency_id&quot;}"/>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+    
+                <p t-if="o.comment">
+                    <strong>Коментар:</strong>
+                    <span t-field="o.comment"/>
+                </p>
+                <p t-if="o.payment_term">
+                    <strong>Рок на плаќање:</strong>
+                    <span t-field="o.payment_term"/>
+                </p>
+                 <div class="row">
+                    <div class="col-xs-5 col-xs-offset-7">
+                        <h4 style="text-align: center;">ТАРГЕТ ГРУП</h4>
+                        <p style="text-align: center;">Лице овластено за потпишување на фактури<br/>Јованоска Марија</p>
+                                            
+                       <img style="position:absolute;right:150px" class="img img-responsive" src="/account/static/src/img/Jovanoska Marija - Potpis.jpg"/>
+                          
+                    </div>
+                </div>
+                <p t-if="o.fiscal_position">
+                    <strong>Фискална позиција:</strong>
+                    <span t-field="o.fiscal_position"/>
+                </p>
+            </div>
+            <div class="footer">
+            </div>
+        </template>
+        
+        <template id="report_invoice_target">
+            <t t-call="report.html_container">
+                <t t-foreach="doc_ids" t-as="doc_id">
+                    <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'target_features.report_invoice_target_document')"/>
+                </t>
+            </t>
         </template>
 
     </data>
