--- a/report/account_proforma_invoice_report.xml
+++ b/report/account_proforma_invoice_report.xml
@@ -49,9 +49,9 @@
                         <strong>Извор:</strong>
                         <p t-field="o.origin"/>
                     </div>
-                    <div class="col-xs-3" t-if="o.currency_id">
-                        <strong>Валута:</strong>
-                        <p t-field="o.currency_id.symbol"/>
+                    <div class="col-xs-3" t-if="o.date_due">
+                        <strong>Датум на доспевање:</strong>
+                        <p t-field="o.date_due"/>
                     </div>
                     <div class="col-xs-3" t-if="o.partner_id.ref">
                         <strong>Код на клиент:</strong>
@@ -128,7 +128,7 @@
                  <div class="row">
                     <div class="col-xs-5 col-xs-offset-7">
                         <h4 style="text-align: center;">ТАРГЕТ ГРУП</h4>
-                        <p style="text-align: center;">Законски застапник<br/>Лице овластено за потпишување на фактури<br/>Јованоска Марија</p>
+                        <p style="text-align: center;">Лице овластено за потпишување на про-фактури<br/>Јованоска Марија</p>
                                             
                        <img style="position:absolute;right:150px" class="img img-responsive" src="/account/static/src/img/Jovanoska Marija - Potpis.jpg"/>
                           
