--- a/report/sale_order_report.xml
+++ b/report/sale_order_report.xml
@@ -4,51 +4,168 @@
     <data>
     
         <template id="report_saleorder_target_document" inherit_id="sale.report_saleorder_document">
-            <xpath expr="//t/div/div[2]/div[1]" position="replace">
-                <div class="col-xs-6"/>
+            
+            
+            <xpath expr="//t/div/div[last()-1]" position="after">
+                
             </xpath>
-            <xpath expr="//div[@t-field='o.partner_id']" position="replace">
-                <br/>
-                <p>To: </p>
-                <span t-field="o.partner_id.name"/><br/>
-                <span t-field="o.partner_id.street"/><br/>
-                <span t-field="o.partner_id.street2"/><br/>
-                <span t-field="o.partner_id.city"/>
-            </xpath>
-            <xpath expr="//h2" position="replace">
+        </template>
+        
+        <template id="report_saleorder_target_document_2">
+            <div class="header">
+                <div style="height: 100%;">
+                    <img class="img img-responsive" src="/account/static/src/img/MemoTarget.JPG" style="width: 100%;"/>
+                </div>
+            </div>
+            <div class="page">
+                <div class="oe_structure"/>
+                <div class="row">
+                    <div class="col-xs-6">
+                    </div>
+                    <div class="col-xs-5 col-xs-offset-1">
+                        <br/>
+                        <p>To: </p>
+                        <span t-field="o.partner_id.name"/><br/>
+                        <t t-if="o.partner_id.street">
+                            <span t-field="o.partner_id.street"/><br/>
+                        </t>
+                        <t t-if="o.partner_id.street2">
+                            <span t-field="o.partner_id.street2"/><br/>
+                        </t>
+                        <t t-if="o.partner_id.city">
+                            <span t-field="o.partner_id.city"/><br/>
+                        </t>
+                    </div>
+                </div>
+    
                 <h2>
                     <span t-if="o.state not in ['draft','sent']">Offer N° </span>
                     <span t-if="o.state in ['draft','sent']">Quotation N° </span>
                     <span t-field="o.name"/>
                 </h2>
-            </xpath>
-            <xpath expr="//t/div/div[last()-1]" position="after">
+    
+                <div class="row mt32 mb32" id="informations">
+                    <div t-if="o.client_order_ref" class="col-xs-3">
+                        <strong>Your Reference:</strong>
+                        <p t-field="o.client_order_ref"/>
+                    </div>
+                    <div t-if="o.date_order" class="col-xs-3">
+                        <strong t-if="o.state not in ['draft','sent']">Date Ordered:</strong>
+                        <strong t-if="o.state in ['draft','sent']">Quotation Date:</strong>
+                        <p t-field="o.date_order" t-field-options='{"format": "dd/MM/yyyy"}'/>
+                    </div>
+                    <div t-if="o.user_id.name" class="col-xs-3">
+                        <strong>Salesperson:</strong>
+                        <p t-field="o.user_id.name"/>
+                    </div>
+                    <div t-if="o.payment_term" class="col-xs-3">
+                        <strong>Payment Term:</strong>
+                        <p t-field="o.payment_term"/>
+                    </div>
+                </div>
+    
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Description</th>
+                            <th>Taxes</th>
+                            <th class="text-right">Quantity</th>
+                            <th class="text-right">Unit Price</th>
+                            <th groups="sale.group_discount_per_so_line">Disc.(%)</th>
+                            <th class="text-right">Price</th>
+                        </tr>
+                   </thead>
+                   <tbody class="sale_tbody">
+                        <tr t-foreach="o.order_line" t-as="l">
+                            <td>
+                               <span t-field="l.name"/>
+                            </td>
+                            <td>
+                                <span t-esc="', '.join(map(lambda x: x.name, l.tax_id))"/>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="l.product_uom_qty"/>
+                                <span groups="product.group_uom" t-field="l.product_uom"/>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="l.price_unit"/>
+                            </td>
+                            <td groups="sale.group_discount_per_so_line">
+                                <span t-field="l.discount"/>
+                            </td>
+                            <td class="text-right">
+                                <span t-field="l.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+    
                 <div class="row">
-                    <div class="col-xs-6 col-xs-offset-7">
+                    <div class="col-xs-4 pull-right">
+                        <table class="table table-condensed">
+                            <tr class="border-black">
+                                <td><strong>Total Without Taxes</strong></td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_untaxed" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Taxes</td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_tax" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                </td>
+                            </tr>
+                            <tr class="border-black">
+                                <td><strong>Total</strong></td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_total" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+    
+                <p t-field="o.note"/>
+                
+                <div class="row">
+                    <div class="col-xs-6 col-xs-offset-8">
                         <br/><br/><br/><br/><br/><br/><br/><br/>
                         <p>Respectfully, </p>
-                        <span t-field="o.company_id.partner_id.name"/><br/>
-                        <t t-if="o.company_id.partner_id.street">               
-                            <span t-field="o.company_id.partner_id.street"/><br/>                                
+                        <strong class="text-danger" t-field="o.company_id.partner_id.name"/><br/>
+                        <span>For smart business decisions</span>
+                        <br/><br/><br/>
+                        <!--t t-if="o.company_id.partner_id.street">
+                            <span t-field="o.company_id.partner_id.street"/><br/><br/>
                         </t>
-                        <t t-if="o.company_id.partner_id.street2">              
-                            <span t-field="o.company_id.partner_id.street2"/><br/>                                
-                        </t>
+                        <t t-if="o.company_id.partner_id.street2">
+                            <span t-field="o.company_id.partner_id.street2"/><br/><br/>
+                        </t-->
                         <t t-if="o.company_id.partner_id.phone">
-                            <span>Phone: </span>                                
-                            <span t-field="o.company_id.partner_id.phone"/><br/>                                
+                            <strong>Contact: </strong>
+                            <strong t-field="o.company_id.partner_id.phone"/><br/><br/>
                         </t>
                         <t t-if="o.company_id.partner_id.email">
-                            <span>E-mail: </span>                                
-                            <span t-field="o.company_id.partner_id.email"/><br/>
+                            <strong>E-mail: </strong>
+                            <strong t-field="o.company_id.partner_id.email"/><br/><br/>
                         </t>
                         <t t-if="o.company_id.partner_id.website">
-                            <span>Website: </span>                                
-                            <span t-field="o.company_id.partner_id.website"/>
+                            <strong>Web: </strong>
+                            <strong t-field="o.company_id.partner_id.website"/>
                         </t>
-                    </div>                                       
+                    </div>
                 </div>
-            </xpath>
+                <div class="oe_structure"/>
+            </div>
+            <div class="footer">
+            </div>
+        </template>
+        
+        <template id="report_saleorder_target">
+            <t t-call="report.html_container">
+                <t t-foreach="doc_ids" t-as="doc_id">
+                    <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'target_features.report_saleorder_target_document_2')"/>
+                </t>
+            </t>
         </template>
 
     </data>
