--- a/views/activation_templates.xml
+++ b/views/activation_templates.xml
@@ -38,7 +38,7 @@
 <p class="text-muted">
     <span>Со почит, </span><br/>
     <b style="color: red;">ТАРГЕТ ГРУП ДОО Скопје</b><br/>
-    <span>Ул. Загребска бр. 28А, 1/1-8</span><br/>
+    <span>Ул. Кеј Димитар Влахов бр.3-1/1/3</span><br/>
     <span>1000 Скопје, Р. Македонија</span><br/>
     <span>Тел/Факс: +389 (2) 3117 100</span><br/>
     <span>Е-маил: </span><a href="mailto:info@targetgroup.mk">info@targetgroup.mk</a><br/>
@@ -96,7 +96,7 @@
 <p class="text-muted">
     <span>Со почит, </span><br/>
     <b style="color: red;">ТАРГЕТ ГРУП ДОО Скопје</b><br/>
-    <span>Ул. Загребска бр. 28А, 1/1-8</span><br/>
+    <span>Ул. Кеј Димитар Влахов бр.3-1/1/3</span><br/>
     <span>1000 Скопје, Р. Македонија</span><br/>
     <span>Тел/Факс: +389 (2) 3117 100</span><br/>
     <span>Е-маил: </span><a href="mailto:info@targetgroup.mk">info@targetgroup.mk</a><br/>
