[IMP] multiple updates

--- a/views/expiration_templates.xml
+++ b/views/expiration_templates.xml
@@ -30,7 +30,7 @@
 <p class="text-muted">
     <span>Со почит, </span><br/>
     <b style="color: red;">ТАРГЕТ ГРУП ДОО Скопје</b><br/>
-    <span>ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br/>
+    <span>Ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br/>
     <span>1000 Скопје, Р. Македонија</span><br/>
     <span>Тел/Факс: +389 (2) 3117 100</span><br/>
     <span>Е-маил: </span><a href="mailto:info@targetgroup.mk">info@targetgroup.mk</a><br/>
@@ -106,7 +106,7 @@
 <p class="text-muted">
     <span>Со почит, </span><br/>
     <b style="color: red;">ТАРГЕТ ГРУП ДОО Скопје</b><br/>
-    <span>ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br/>
+    <span>Ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br/>
     <span>1000 Скопје, Р. Македонија</span><br/>
     <span>Тел/Факс: +389 (2) 3117 100</span><br/>
     <span>Е-маил: </span><a href="mailto:info@targetgroup.mk">info@targetgroup.mk</a><br/>
