[IMP] add description in phone calls list view

--- a/views/target_views.xml
+++ b/views/target_views.xml
@@ -403,6 +403,9 @@
                 <xpath expr="//tree" position="inside">
                     <field name="state"/>
                 </xpath>
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name="description"/>
+                </xpath>
             </field>
         </record>
         
